--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -66,7 +66,7 @@ it:
       rooms:
         info: Limita il numero di stanze che un utente può avere (inclusa la stanza Home). Questa impostazione non si applica agli utenti Amministratori
         title: Numero di stanze per utente
-      subtitle: Personalizza Greenlight
+      subtitle: Personalizza Edafos Video Conference
       title: Impostazioni Sito
     flash:
       approved: L'utente è stato approvato con successo
