--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -36,7 +36,7 @@ bg:
         enabled: Разрешено
         info: Разреши само ауторизирани потребители да влизат в стаите
         title: Изисква ауторизация за стаите
-        user-info: Трябва да се ауторизирате в Greenlight за да влезете в тази стая
+        user-info: Трябва да се ауторизирате в OpenSchool за да влезете в тази стая
       branding:
         change: Промени снимката
         info: Променя логото което се появява в горния ляв ъгъл
@@ -83,7 +83,7 @@ bg:
       shared_access:
         info: "Забраната ще премахне, от падащото меню за опции на стаята възможността тя да бъде споделяна."
         title: Позволява на потребителите да споделят стаи
-      subtitle: Персонализиране на Greenlight
+      subtitle: Персонализиране на OpenSchool
       title: Настройки на сайта
     flash:
       approved: Потребителя е одобрен
@@ -194,9 +194,9 @@ bg:
       contact_admin: "Ако не сте администратор, моля свържете се с такъв."
       continue: Желая да продължа да използвам 1.0.
       notice: >
-        Greenlight засече грешка при миграцията да базата данни<br>Това може да е, защото не сте обновили Greenlight до версия 2.0.
+        OpenSchool засече грешка при миграцията да базата данни<br>Това може да е, защото не сте обновили OpenSchool до версия 2.0.
       upgrade: Покажи ми как да обновя до 2.0!
-      version: "Пуснахме нова версия на Greenlight, но вашата база данни е несъвместима."
+      version: "Пуснахме нова версия на OpenSchool, но вашата база данни е несъвместима."
     messages:
       blank: не може да е празно
       too_short: прекалено е кратко
@@ -207,7 +207,7 @@ bg:
       inclusion: не е включен в списъка
     no_provider:
       message: Сайта който се опитвате да отворите не е разрешен
-      help: Моля свържете се със администратор за да настройте Greenlight
+      help: Моля свържете се със администратор за да настройте OpenSchool
     not_found:
       message: Съжаляваме! Страницата която търсите не съществува.
       help: "Възможно ли е премахването му?"
@@ -235,7 +235,7 @@ bg:
     email: Email
     submit: Изпрати
   go_back: Върни се
-  greenlight: "Greenlight "
+  greenlight: "OpenSchool "
   header:
     all_recordings: Всички записи
     dropdown:
@@ -261,9 +261,9 @@ bg:
   landing:
     about: "%{href}е лек интерфейс  за Вашата web базирана конферентна система използваща OpenSchool с отворен код. Можете да създадете Ваши собствени стаи за провеждане на сесии или да се присъедините към други използвайки удобен кратък линк."
     welcome: Добре дошли в OpenSchool
-    video: Разгледайте нашия урок за използване на Greenlight
+    video: Разгледайте нашия урок за използване на OpenSchool
     upgrade: Покажи ми как да обновя до 2.0!
-    version: "Пуснахме нова версия на Greenlight, но вашата база данни е несъвместима."
+    version: "Пуснахме нова версия на OpenSchool, но вашата база данни е несъвместима."
   language_default: По подразбиране(Език на браузъра)
   ldap_error: Връзката с LDAP сървъра невъзможна. Моля проверете Вашата LDAP конфигурация в env файла и се убедете че сървъра работи.
   login: Вход
@@ -275,10 +275,10 @@ bg:
         signin: "За достъп до порсоналните Ви стаи, щракнете бутона по-долу и се ауторизирайте."
         signin_link: Вход
         signup:
-          info: Регистриран е нов потребител в Greenlight
-          more-info: "За да разрешите достъпа до Greenlight на този потребител, трябва да одобрите неговия профил в настройките на организацията"
+          info: Регистриран е нов потребител в OpenSchool
+          more-info: "За да разрешите достъпа до OpenSchool на този потребител, трябва да одобрите неговия профил в настройките на организацията"
           admins_link: Прегледай страницата на организацията
-          subject: Влезе нов Greenlight потребител
+          subject: Влезе нов OpenSchool потребител
           username: "Потребителя влезе с име %{name}и email %{email}"
         subject: Профила е одобрен
         username: "Потребителкото име е %{email}"
@@ -292,9 +292,9 @@ bg:
         signup_info: "За регистрация чрез email, щракнете бутона по-долу и следвайте стъпките."
         signup_link: Регистрация
         signup:
-          info: "Потребител, който е поканен, се е регистрирал, за да използва Greenlight."
+          info: "Потребител, който е поканен, се е регистрирал, за да използва OpenSchool."
           admins_link: Прегледай страницата на организацията
-          subject: Влезе нов Greenlight потребител
+          subject: Влезе нов OpenSchool потребител
           username: "Потребителя влезе с име %{name}и email %{email}"
         subject: Покана за вход в OpenSchool
         username: "Вашето потребителско име е %{email}"
