--- a/config/locales/hy.yml
+++ b/config/locales/hy.yml
@@ -194,9 +194,9 @@ hy:
       contact_admin: Կապ հաստատեք ադմինիստրատորի հետ և տեղեկացրեք խնդրի մասին
       continue: Կցանկանայի շարունակել 1․0 տարբերակի օգտագործումը
       notice: >
-        Greenlight-ը հայտնաերել է տվյալների հենքի տեղափոխման խնդիր։ <br> Հնարավոր է խնդիրը կայանում է նրանում, որ չեք թարմացրել Greenlight 2.0-ի
+        OpenSchool-ը հայտնաերել է տվյալների հենքի տեղափոխման խնդիր։ <br> Հնարավոր է խնդիրը կայանում է նրանում, որ չեք թարմացրել OpenSchool 2.0-ի
       upgrade: "Ցույց տվեք, թե ինչպես պետք է թարմացնեմ 2․0-ի"
-      version: "Թողարկվել է Greenlight 2․0-ն, սակայն Ձեր տվյալների հենքը անհամատեղելի է։"
+      version: "Թողարկվել է OpenSchool 2․0-ն, սակայն Ձեր տվյալների հենքը անհամատեղելի է։"
     messages:
       blank: չի կարող լինել դատարկ
       too_short: շատ կարճ է
@@ -207,7 +207,7 @@ hy:
       inclusion: ցուցակում ընդգրկված չէ
     no_provider:
       message: "Կայքը, որին թույտվություն եք հայցում, միացված չէ"
-      help: Դիմեք ադմինիստրատորին Greenlight տեղադրելու համար
+      help: Դիմեք ադմինիստրատորին OpenSchool տեղադրելու համար
     not_found:
       message: Ձեր փնտրած էջը գոյություն չունի
       help: Միգուցե այն հեռացվե՞լ է
@@ -235,7 +235,7 @@ hy:
     email: էլեկտրոնային փոստ
     submit: Ուղարկել
   go_back: Վերադառնալ
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: Բոլոր գրանցումները
     dropdown:
@@ -261,9 +261,9 @@ hy:
   landing:
     about: "%{href} OpenSchool-ի սերվերի բաց կոդով պարզեցված ինտերֆեյս է"
     welcome: Բարի գալուստ OpenSchool
-    video: Ծանոթացեք Greenlight-ի օգտագործման տեսաուղեցույցներին
+    video: Ծանոթացեք OpenSchool-ի օգտագործման տեսաուղեցույցներին
     upgrade: "Ցուցադրեք, թե ինչպես թարմացնեմ 2.0 տարբերակին"
-    version: "Թողարկվել է Greenlight-ի նոր տարբերակը, սակայն Ձեր տվյալների հենքը անհամատեղելի է"
+    version: "Թողարկվել է OpenSchool-ի նոր տարբերակը, սակայն Ձեր տվյալների հենքը անհամատեղելի է"
   language_default: Ի սկզբանե նշված լեզուն(Բրաուզերի լեզուն)
   ldap_error: "LDAP սերվերին միանալու անհնարինություն։ Ստուգեք LDAP-ի կարգավորումները env ֆայլում և համոզվեք, որ Ձեր սերվերն աշխատում է"
   login: Մուտք
@@ -275,10 +275,10 @@ hy:
         signin: Ձեր անձնական սենյակներին անցնելու համար սեղմեք ներքևում և մուտք գործեք օգտահաշիվ
         signin_link: Մուտք
         signup:
-          info: Գրանցվել է Greenlight-ի նոր օգտվող։
-          more-info: Greenlight-ի թույլտվություն տալու համար պետք է օգտվողի օգտահաշիվը հաստատեք կայքի կարգավորումներում։
+          info: Գրանցվել է OpenSchool-ի նոր օգտվող։
+          more-info: OpenSchool-ի թույլտվություն տալու համար պետք է օգտվողի օգտահաշիվը հաստատեք կայքի կարգավորումներում։
           admins_link: Այցելել կամակերպության կայքէջ
-          subject: Greenlight-ի նոր օգտվողի գրանցում
+          subject: OpenSchool-ի նոր օգտվողի գրանցում
           username: "Գրանցվել է %{name} անունով և %{email} էլ․ փոստի հասցեով օգտվողը"
         subject: Օգտահաշիվը հաստատվել է
         username: "Ձեր մոըքանունն է՝ %{email}"
@@ -292,9 +292,9 @@ hy:
         signup_info: "Մուտք գործելու համար օգտագործեք Ձեր էլելկտրոնային փոստի հասցեն, սեղմեք ներքևի կոճակը և հետևեք քայլերին"
         signup_link: Գրանցում
         signup:
-          info: Հրավիրված օգտվողը գրանցվել է Greenlight-ում։
+          info: Հրավիրված օգտվողը գրանցվել է OpenSchool-ում։
           admins_link: Այցելել կազմակերպության կայքէջ
-          subject: Greenlight-ում նոր օգտատիրոջ գրանցում։
+          subject: OpenSchool-ում նոր օգտատիրոջ գրանցում։
           username: "%{name} անունով և %{email} էլեկտրոնային փոստի հասցեով օգտատերը գրանցվել է։"
         subject: OpenSchool-ին միանալու հրավեր
         username: "Ձեր մոըքանունն է՝ %{email}։"
