--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -82,7 +82,7 @@ ru:
       shared_access:
         info: Отключение опции удалит кнопку из выпадающего меню опций Комнаты и запретит пользователям совместное использование комнат
         title: Разрешить пользователям совместное использование комнат
-      subtitle: Изменить настройки интерфейса Greenlight
+      subtitle: Изменить настройки интерфейса OpenSchool
       title: Настройки сайта
     flash:
       approved: Пользователь одобрен.
@@ -193,9 +193,9 @@ ru:
       contact_admin: "Если вы не являетесь администратором, пожалуйста, свяжитесь с одним из них."
       continue: Я бы хотел продолжить использовать 1.0.
       notice: >
-        Greenlight обнаружил ошибку переноса базы данных.<br> Это может быть из-за того что вы не обновились до Greenlight 2.0.
+        OpenSchool обнаружил ошибку переноса базы данных.<br> Это может быть из-за того что вы не обновились до OpenSchool 2.0.
       upgrade: "Покажите мне, как обновить до 2.0!"
-      version: "Мы выпустили новую версию Greenlight, но ваша база данных не совместима."
+      version: "Мы выпустили новую версию OpenSchool, но ваша база данных не совместима."
     messages:
       blank: не может быть пустым
       too_short: слишком коротко
@@ -206,7 +206,7 @@ ru:
       inclusion: не входит в список
     no_provider:
       message: "Сайт, к которому вы пытаетесь получить доступ, не включен"
-      help: Пожалуйста обратитесь к вашему системному администратору для установки Greenlight
+      help: Пожалуйста обратитесь к вашему системному администратору для установки OpenSchool
     not_found:
       message: "Извините! Страница, которую вы ищете, не существует."
       help: "Может быть она была удалена?"
@@ -234,7 +234,7 @@ ru:
     email: Электронная почта
     submit: Отправить
   go_back: Вернуться
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: Все записи
     dropdown:
@@ -260,9 +260,9 @@ ru:
   landing:
     about: "%{href} это упрощенный веб интерфейс для вашего сервера веб конференций открытым исходным кодом OpenSchool. Вы можете создавать свои собственные комнаты для проведения встреч или присоединяться к другим, используя короткую и удобную ссылку."
     welcome: Добро пожаловать в OpenSchool.
-    video: Ознакомьтесь с нашим учебником по использованию Greenlight
+    video: Ознакомьтесь с нашим учебником по использованию OpenSchool
     upgrade: "Покажите мне, как обновить до 2.0!"
-    version: "Мы выпустили новую версию Greenlight, но ваша база данных не совместима."
+    version: "Мы выпустили новую версию OpenSchool, но ваша база данных не совместима."
   language_default: По умолчанию (язык браузера)
   ldap_error: "Невозможно подключиться к серверу LDAP. Пожалуйста, проверьте свою конфигурацию LDAP в файле env и убедитесь, что ваш сервер работает."
   login: Войти
@@ -274,10 +274,10 @@ ru:
         signin: "Для доступа к Вашим личным комнатам, нажмите кнопку ниже и войдите в систему."
         signin_link: Войти
         signup:
-          info: Зарегистрирован новый пользователь Greenlight.
+          info: Зарегистрирован новый пользователь OpenSchool.
           more-info: Чтобы разрешить полльзователю дсотуп в Grenlight вы должны одобрить его аккаунт в настройках организации.
           admins_link: Посетить страничку орагнизации
-          subject: Регистрация нового пользователя Greenlight
+          subject: Регистрация нового пользователя OpenSchool
           username: "Зарегистрирован пользователь с именем %{name} и email %{email}."
         subject: Аккаунт подтвержден
         username: "Ваш логин %{email}."
@@ -291,9 +291,9 @@ ru:
         signup_info: "Для входа используйте ваш email, нажмите на кнопку ниже и следуйте инструкциям."
         signup_link: Регистрация
         signup:
-          info: "Пользователь, который был приглашен зарегистрироваться в Greenlight."
+          info: "Пользователь, который был приглашен зарегистрироваться в OpenSchool."
           admins_link: Посетить страничку орагнизации
-          subject: Регистрация нового пользователя Greenlight.
+          subject: Регистрация нового пользователя OpenSchool.
           username: "Зарегистрирован пользователь с именем %{name} и email %{email}."
         subject: Приглашение присоединиться к OpenSchool
         username: "Ваш логин %{email}."
