--- a/config/locales/tr_TR.yml
+++ b/config/locales/tr_TR.yml
@@ -83,7 +83,7 @@ tr_TR:
       shared_access:
         info: "Devre dışı ayarını seçmek oda seçenekleri düğmesini kaldırır, kullanıcıların odaları paylaşmasını önler"
         title: Kullanıcıların odaları paylaşmasına olanak verir
-      subtitle: Greenlight'ı Özelleştir
+      subtitle: OpenSchool'ı Özelleştir
       title: Site Ayarları
     flash:
       approved: Kullanıcı Başarıyla Onaylandı
@@ -194,9 +194,9 @@ tr_TR:
       contact_admin: "Yönetici değilseniz, lütfen bir tanesine başvurun."
       continue: 1.0 kullanarak kalmak istiyorum.
       notice: >
-        Greenlight veri tabanı aktarımı hatası verdi.<br> Greenlight 2.0. güncelleme yapmadığınız için gerçekleşmiş olabilir
+        OpenSchool veri tabanı aktarımı hatası verdi.<br> OpenSchool 2.0. güncelleme yapmadığınız için gerçekleşmiş olabilir
       upgrade: 2.0'a nasıl yükselteceğimi göster!
-      version: "Greenlight'ın yeni bir versiyonunu yayınladık, ancak veritabanınız uyumlu değil."
+      version: "OpenSchool'ın yeni bir versiyonunu yayınladık, ancak veritabanınız uyumlu değil."
     messages:
       blank: boş olamaz
       too_short: çok kısa
@@ -207,7 +207,7 @@ tr_TR:
       inclusion: Listeye dahil edilmedi
     no_provider:
       message: Erişmeye çalıştığınız site etkin değil
-      help: Lütfen Greenlight'ı kurmak için sistem yöneticinize başvurun.
+      help: Lütfen OpenSchool'ı kurmak için sistem yöneticinize başvurun.
     not_found:
       message: Üzgünüm! Aradığınız sayfa mevcut değil.
       help: "Kaldırılmış olması mümkün mü?"
@@ -235,7 +235,7 @@ tr_TR:
     email: E-mail
     submit: Gönder
   go_back: Geri dön
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: Tüm Kayıtlar
     dropdown:
@@ -261,9 +261,9 @@ tr_TR:
   landing:
     about: "%{href} OpenSchool açık kaynak web konferans sunucusu için basit bir  ön yüzdür. Oturumlar düzenlemek için kendi odalarınızı oluşturabilir veya  kısa bir bağlantı göndererek katılmalarını sağlayabilirsiniz."
     welcome: OpenSchool'a hoş geldiniz.
-    video: Greenlight'ı kullanma hakkındaki eğitimimizi izleyin
+    video: OpenSchool'ı kullanma hakkındaki eğitimimizi izleyin
     upgrade: 2.0'a nasıl yükselteceğimi göster!
-    version: "Greenlight'ın yeni bir versiyonunu yayınladık, ancak veritabanınız uyumlu değil."
+    version: "OpenSchool'ın yeni bir versiyonunu yayınladık, ancak veritabanınız uyumlu değil."
   language_default: Varsayılan (tarayıcı dili)
   ldap_error: LDAP sunucusuna bağlanılamadı. Lütfen env dosyasındaki LDAP konfigürasyonunuzu kontrol ediniz ve sunucunuzun çalıştığından emin olunuz
   login: oturum aç
@@ -275,10 +275,10 @@ tr_TR:
         signin: Kişisel odalarınıza erişmek için aşağıdaki butona tıklayın ve giriş yapın.
         signin_link: Oturum aç
         signup:
-          info: Greenlight'ı kullanmak için yeni bir kullanıcı kayıt oldu.
-          more-info: Kullanıcıların Greenlight a ulaşabilmeleri için organizasyon ayarlarında kullanıcının hesabını onaylamalısınız
+          info: OpenSchool'ı kullanmak için yeni bir kullanıcı kayıt oldu.
+          more-info: Kullanıcıların OpenSchool a ulaşabilmeleri için organizasyon ayarlarında kullanıcının hesabını onaylamalısınız
           admins_link: Organizasyon Sayfasını Ziyaret Edin
-          subject: Yeni Greenlight Kullanıcısı Kayıt Ol
+          subject: Yeni OpenSchool Kullanıcısı Kayıt Ol
           username: "Kullanıcı %{name} ismi ve %{email} e-posta adresi ile oturum açtı"
         subject: Hesap Onaylandı
         username: "Kullanıcı adınız %{email}."
@@ -292,9 +292,9 @@ tr_TR:
         signup_info: E-postanızı kullanarak kaydolmak için aşağıdaki butona tıklayın ve adımları izleyin.
         signup_link: Kaydol
         signup:
-          info: Davet edilen bir kullanıcı Greenlight'ı kullanmak için kaydoldu.
+          info: Davet edilen bir kullanıcı OpenSchool'ı kullanmak için kaydoldu.
           admins_link: Organizasyon Sayfasını Ziyaret Edin
-          subject: Yeni Greenlight Kullanıcısı Kayıt Ol
+          subject: Yeni OpenSchool Kullanıcısı Kayıt Ol
           username: "Kullanıcı %{name} ismi ve %{email} e-posta adresi ile oturum açtı"
         subject: OpenSchool'a katılma davetiyesi
         username: "Kullanıcı adınız%{email}"
