--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -36,7 +36,7 @@ uk:
         enabled: Включено
         info: Тільки аутентифіковані користувачі зможуть приєднатися до кімнати
         title: Вимагати аутентифікації для підключення до кімнат
-        user-info: Ви повинні увійти в Greenlight для приєднання до цієї кімнаті
+        user-info: Ви повинні увійти в OpenSchool для приєднання до цієї кімнаті
       branding:
         change: Змінити зображення
         info: "Змінити фірмове зображення, розміщене в лівому верхньому кутку"
@@ -82,7 +82,7 @@ uk:
       shared_access:
         info: "Відключення опції видалить кнопку з меню, що знаходиться у опціях Кімнати і заборонить користувачам спільне використання кімнат"
         title: Дозволити користувачам спільне використання кімнат
-      subtitle: Змінити налаштування інтерфейсу Greenlight
+      subtitle: Змінити налаштування інтерфейсу OpenSchool
       title: Налаштування сайту
     flash:
       approved: Користувач схвалений.
@@ -193,9 +193,9 @@ uk:
       contact_admin: "Якщо ви не є адміністратором, будь ласка, зв'яжіться з одним з них."
       continue: Я б хотів продовжити використовувати 1.0.
       notice: >
-        Greenlight виявив помилку перенесення бази даних. <br> Це може бути через те що ви не оновилися до Greenlight 2.0.
+        OpenSchool виявив помилку перенесення бази даних. <br> Це може бути через те що ви не оновилися до OpenSchool 2.0.
       upgrade: "Покажіть мені, як оновити до 2.0!"
-      version: "Ми випустили нову версію Greenlight, але ваша база даних не сумісна."
+      version: "Ми випустили нову версію OpenSchool, але ваша база даних не сумісна."
     messages:
       blank: не може бути порожнім
       too_short: занадто мало символів
@@ -206,7 +206,7 @@ uk:
       inclusion: не входить в список
     no_provider:
       message: "Сайт, до якого ви намагаєтеся отримати доступ, не включений"
-      help: Будь ласка зверніться до вашого системного адміністратора для установки Greenlight
+      help: Будь ласка зверніться до вашого системного адміністратора для установки OpenSchool
     not_found:
       message: "Вибачте! Сторінка, яку ви шукаєте, не існує."
       help: "Може бути вона була видалена?"
@@ -234,7 +234,7 @@ uk:
     email: Електронна пошта
     submit: Відправити
   go_back: Повернутися
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: Всі записи
     dropdown:
@@ -260,9 +260,9 @@ uk:
   landing:
     about: " %{href} це спрощений веб інтерфейс для вашого сервера веб конференцій відкритим вихідним кодом OpenSchool. Ви можете створювати свої власні кімнати для проведення зустрічей або приєднуватися до інших, використовуючи коротку і зручну посилання."
     welcome: Ласкаво просимо в OpenSchool.
-    video: Ознайомтеся з нашим підручником по використанню Greenlight
+    video: Ознайомтеся з нашим підручником по використанню OpenSchool
     upgrade: "Покажіть мені, як оновити до 2.0!"
-    version: "Ми випустили нову версію Greenlight, але ваша база даних не сумісна."
+    version: "Ми випустили нову версію OpenSchool, але ваша база даних не сумісна."
   language_default: За замовчуванням (мова браузера)
   ldap_error: "Неможливо підключитися до сервера LDAP. Будь ласка, перевірте свою конфігурацію LDAP в файлі env і переконайтеся, що ваш сервер працює."
   login: Увійти
@@ -274,10 +274,10 @@ uk:
         signin: "Для доступу до Ваших особистих кімнатах, натисніть кнопку нижче і увійдіть в систему."
         signin_link: Увійти
         signup:
-          info: З нами новий користувач Greenlight.
+          info: З нами новий користувач OpenSchool.
           more-info: "Щоб дозволити користувачу доступо до Grenlight, ви повинні схвалити його аккаунт в налаштуваннях організації."
           admins_link: Відвідати сторінку орагнізації
-          subject: Реєстрація нового користувача Greenlight
+          subject: Реєстрація нового користувача OpenSchool
           username: "З нами користувач з ім'ям %{name} і email %{email}."
         subject: Аккаунт підтверджений
         username: "Ваш логін %{email}."
@@ -291,9 +291,9 @@ uk:
         signup_info: "Для входу використовуйте ваш email, натисніть на кнопку нижче і дотримуйтесь інструкцій."
         signup_link: Реєстрація
         signup:
-          info: "Користувач, який був запрошений зареєструватися в Greenlight."
+          info: "Користувач, який був запрошений зареєструватися в OpenSchool."
           admins_link: Відвідати сторінку орагнізації
-          subject: Реєстрація нового користувача Greenlight.
+          subject: Реєстрація нового користувача OpenSchool.
           username: "З нами користувач з ім'ям %{name} і email %{email}."
         subject: Запрошення приєднатися до OpenSchool
         username: "Ваш логін %{email}."
