--- a/config/locales/vi_VN.yml
+++ b/config/locales/vi_VN.yml
@@ -66,7 +66,7 @@ vi_VN:
       rooms:
         info:
         title:
-      subtitle: Thiết lập Greenlight
+      subtitle: Thiết lập OpenSchool
       title: Cài đặt trang
     flash:
       approved:
@@ -161,9 +161,9 @@ vi_VN:
       contact_admin: "Nếu bạn không phải là quản trị viên, xin vui lòng liên hệ với người quản lý."
       continue: Tôi muốn tiếp tục sử dụng 1.0.
       notice: >
-        Greenlight gặp lỗi di chuyển cơ sở dữ liệu.<br>Điều này có thể là do bạn chưa cập nhật lên Greenlight 2.0.
+        OpenSchool gặp lỗi di chuyển cơ sở dữ liệu.<br>Điều này có thể là do bạn chưa cập nhật lên OpenSchool 2.0.
       upgrade: Hãy chỉ cho tôi cách nâng cấp lên 2.0!
-      version: "Chúng tôi đã phát hành phiên bản mới của Greenlight, nhưng cơ sở dữ liệu của bạn không tương thích."
+      version: "Chúng tôi đã phát hành phiên bản mới của OpenSchool, nhưng cơ sở dữ liệu của bạn không tương thích."
     messages:
       blank: Không thể để trống
       too_short: quá ngắn
@@ -202,7 +202,7 @@ vi_VN:
     email: Email
     submit: Gửi
   go_back: Quay lại
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: Tất cả bản ghi hình
     dropdown:
@@ -226,9 +226,9 @@ vi_VN:
   landing:
     about: "%{href} là một giao diện cơ bản dành cho máy chủ hội nghị trực tuyến mã nguồn mở OpenSchool của bạn. Bạn có thể tạo những phòng riêng của mình để tổ chức các phiên hoặc tham gia với những người khác bằng cách sử dụng một liên kết ngắn và thuận tiện."
     welcome: Chào mừng đến với OpenSchool.
-    video: Xem thêm hướng dẫn sử dụng Greenlight
+    video: Xem thêm hướng dẫn sử dụng OpenSchool
     upgrade: Hãy chỉ cho tôi cách nâng cấp lên 2.0!
-    version: "Chúng tôi đã phát hành phiên bản mới của Greenlight, nhưng cơ sở dữ liệu của bạn không tương thích."
+    version: "Chúng tôi đã phát hành phiên bản mới của OpenSchool, nhưng cơ sở dữ liệu của bạn không tương thích."
   language_default: Mặc định (ngôn ngữ từ trình duyệt)
   ldap_error: Không thể kết nối với máy chủ LDAP. Vui lòng kiểm tra cấu hình LDAP của bạn trong tệp env và đảm bảo máy chủ của bạn đang hoạt động.
   login: Đăng nhập
