--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -36,7 +36,7 @@ fr:
         enabled: Activé
         info: Autoriser uniquement les utilisateurs authentifiés à rejoindre une salle
         title: Authentification requise pour rejoindre les salles
-        user-info: Vous devez être connecté à Greenlight pour rejoindre cette salle
+        user-info: Vous devez être connecté à OpenSchool pour rejoindre cette salle
       branding:
         change: Changer l'image
         info: Change l'image qui apparaît en haut à gauche
@@ -83,7 +83,7 @@ fr:
       shared_access:
         info: "Désactiver: supprimera de la liste déroulante des options du Salon, le bouton de partage, empêchant ainsi les utilisateurs de partager des Salons"
         title: Autorise les utilisateurs à partager le Salon
-      subtitle: Personnaliser Greenlight
+      subtitle: Personnaliser OpenSchool
       title: Paramètres du site
     flash:
       approved: L'utilisateur a été approuvé.
@@ -194,9 +194,9 @@ fr:
       contact_admin: "Si vous n’êtes pas un administrateur, veuillez en contacter un."
       continue: Je veux rester sur la 1.0.
       notice: >
-        Greenlight a rencontré une erreur de migration de base de données.<br> C'est peut-être parce que vous n'avez pas mis à jour Greenlight 2.0.
+        OpenSchool a rencontré une erreur de migration de base de données.<br> C'est peut-être parce que vous n'avez pas mis à jour OpenSchool 2.0.
       upgrade: Montrez-moi comment passer à la version 2.0 !
-      version: "Nous avons publié une nouvelle version de Greenlight, mais votre base de données n'est pas compatible."
+      version: "Nous avons publié une nouvelle version de OpenSchool, mais votre base de données n'est pas compatible."
     messages:
       blank: ne peut pas être vide
       too_short: est trop court
@@ -235,7 +235,7 @@ fr:
     email: Email
     submit: Soumettre
   go_back: Retour
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: Tous les enregistrements
     dropdown:
@@ -261,9 +261,9 @@ fr:
   landing:
     about: "%{href} est une interface simple pour votre serveur open-source de Web conférence OpenSchool. Vous pouvez créer vos propres salles pour héberger des sessions ou rejoindre d'autres utilisateurs via un lien court et pratique. "
     welcome: Bienvenue sur OpenSchool.
-    video: Regardez notre tutoriel sur l'utilisation de Greenlight
+    video: Regardez notre tutoriel sur l'utilisation de OpenSchool
     upgrade: Montrez-moi comment passer à la version 2.0 !
-    version: "Nous avons publié une nouvelle version de Greenlight, mais votre base de données n'est pas compatible."
+    version: "Nous avons publié une nouvelle version de OpenSchool, mais votre base de données n'est pas compatible."
   language_default: Par défaut (langue du navigateur)
   ldap_error: Impossible de se connecter au serveur LDAP. Veuillez vérifier votre configuration LDAP dans le fichier env et vous assurer que votre serveur est en cours d'exécution.
   login: Connexion
@@ -275,10 +275,10 @@ fr:
         signin: " Pour accéder à vos salons personnelles, cliquez sur le bouton ci-dessous et connectez-vous."
         signin_link: Connexion
         signup:
-          info: Un nouvel utilisateur s'est inscrit pour utiliser Greenlight.
-          more-info: "Pour autoriser cet utilisateur à accéder à Greenlight, vous devez approuver son compte depuis la page \"Organisation\"."
+          info: Un nouvel utilisateur s'est inscrit pour utiliser OpenSchool.
+          more-info: "Pour autoriser cet utilisateur à accéder à OpenSchool, vous devez approuver son compte depuis la page \"Organisation\"."
           admins_link: Visitez la page "Organisation"
-          subject: Inscription d'un nouvel utilisateur Greenlight
+          subject: Inscription d'un nouvel utilisateur OpenSchool
           username: "L'utilisateur s'est inscrit avec le nom %{name} et l'adresse email %{email}. "
         subject: Compte approuvé
         username: "Votre nom d'utilisateur est %{email}."
@@ -292,9 +292,9 @@ fr:
         signup_info: "Pour vous inscrire utilisez votre e-mail, cliquez sur le bouton ci-dessous et suivez les étapes."
         signup_link: Inscription
         signup:
-          info: Un utilisateur invité s'est inscrit pour utiliser Greenlight.
+          info: Un utilisateur invité s'est inscrit pour utiliser OpenSchool.
           admins_link: Visitez la page "Organisation"
-          subject: Inscription d'un nouvel utilisateur Greenlight
+          subject: Inscription d'un nouvel utilisateur OpenSchool
           username: "L'utilisateur s'est inscrit avec le nom %{name} et l'adresse email %{email}."
         subject: Invitation à joindre OpenSchool
         username: "Votre nom d'utilisateur est %{email}."
