--- a/config/locales/hu_HU.yml
+++ b/config/locales/hu_HU.yml
@@ -36,7 +36,7 @@ hu_HU:
         enabled: Bekapcsolva
         info: Csak hitelesített felhasználók léphetnek be a szobába
         title: Hitelesítés megkövetelése a szobákhoz
-        user-info: Ebbe a szobába a belépéshez a Greenlight-ba be kell jelentkezned
+        user-info: Ebbe a szobába a belépéshez a OpenSchool-ba be kell jelentkezned
       branding:
         change: Kép cseréje
         info: A bal felső sarokban megjelenő arculati kép cseréje
@@ -83,7 +83,7 @@ hu_HU:
       shared_access:
         info: "Ha kikapcsolod, akkor a gombot eltávolítod a Szobabeállítások legördülő menüből, megakadályozva ezzel, hogy a felhasználók megosszák a szobákat"
         title: A felhasználók megoszthatnak szobákat
-      subtitle: Greenlight személy szabása
+      subtitle: OpenSchool személy szabása
       title: Weboldal beállításai
     flash:
       approved: A felhasználót sikeresen jóváhagytad.
@@ -194,9 +194,9 @@ hu_HU:
       contact_admin: "Te nem vagy üzemeltető, keress egyet."
       continue: Inkább maradnék az 1.0-s használatánál.
       notice: >
-        Greenlight adatbázis-migrációs hiba. <br>Ellenőrizd, frissítetted-e a Greenlight 2.0-ás verziójára.
+        OpenSchool adatbázis-migrációs hiba. <br>Ellenőrizd, frissítetted-e a OpenSchool 2.0-ás verziójára.
       upgrade: "Mutasd, hogyan tudok frissíteni a 2.0-ás verzióra!"
-      version: "A Greenlight új verziója jelent meg, de az adatbázisod nem kompatibilis."
+      version: "A OpenSchool új verziója jelent meg, de az adatbázisod nem kompatibilis."
     messages:
       blank: nem lehet üres
       too_short: túl rövid
@@ -207,7 +207,7 @@ hu_HU:
       inclusion: nincs benne ebben a listában
     no_provider:
       message: "A webhely, amelyhez megpróbálsz hozzáférni, nincs bekapcsolva"
-      help: "Kérjük, keresd a rendszer üzemeltetőjét a Greenlight telepítéséhez"
+      help: "Kérjük, keresd a rendszer üzemeltetőjét a OpenSchool telepítéséhez"
     not_found:
       message: Sajnáljuk! A keresett oldal nem létezik.
       help: "Lehetséges, hogy már eltávolították?"
@@ -235,7 +235,7 @@ hu_HU:
     email: E-mail
     submit: Jóváhagyás
   go_back: Vissza
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: Összes felvétel
     dropdown:
@@ -261,9 +261,9 @@ hu_HU:
   landing:
     about: "%{href} egy egyszerű front-end a nyílt forráskódú OpenSchool webkonferencia-rendszerhez. Saját magadnak szobákat hozhatsz létre, illetve mások csatlakozhatnak egy rövid link használatával."
     welcome: A OpenSchool üdvözöl.
-    video: Nézd meg az ismertetőnket a  Greenlight használatáról
+    video: Nézd meg az ismertetőnket a  OpenSchool használatáról
     upgrade: "Mutasd, hogyan tudok frissíteni a 2.0-ás verzióra!"
-    version: "A Greenlight új verziója jelent meg, de az adatbázisod nem kompatibilis."
+    version: "A OpenSchool új verziója jelent meg, de az adatbázisod nem kompatibilis."
   language_default: Alapértelmezett (a böngésző nyelve)
   ldap_error: "Nem sikerült csatlakozni az LDAP szerverhez. Kérjük, ellenőrizd a beállításokat a környezeti, env fájlban, illetve azt, hogy a szerver működik és elérhető."
   login: Bejelentkezés
@@ -275,10 +275,10 @@ hu_HU:
         signin: A személyre szabott szoba eléréséhez kattints az alábbi gombra és jelentkezz be.
         signin_link: Bejelentkezés
         signup:
-          info: "Egy új felhasználó regisztrált, hogy használhassa a Greenlight-ot."
-          more-info: "Ahhoz, hogy ez a felhasználó elérhesse a Greenlight-ot, a szervezheti beállításokban hozzá kell rendelned."
+          info: "Egy új felhasználó regisztrált, hogy használhassa a OpenSchool-ot."
+          more-info: "Ahhoz, hogy ez a felhasználó elérhesse a OpenSchool-ot, a szervezheti beállításokban hozzá kell rendelned."
           admins_link: A Szervezeti oldal megtekintése
-          subject: Új Greenlight felhasználó regisztrált
+          subject: Új OpenSchool felhasználó regisztrált
           username: "A felhasználó %{name} felhasználónévvel, %{email} e-mail címmel regisztrált."
         subject: Jóváhagyott fiók
         username: "A felhasználóneved %{email}."
@@ -292,9 +292,9 @@ hu_HU:
         signup_info: Az e-maileddel regisztrációhoz kattints az alábbi lehetőségre és hajtsd végre a lépéseket.
         signup_link: Regisztráció
         signup:
-          info: "Egy meghívott felhasználó regisztrált, hogy használhassa a Greenlight-ot."
+          info: "Egy meghívott felhasználó regisztrált, hogy használhassa a OpenSchool-ot."
           admins_link: A Szervezeti oldal megtekintése
-          subject: Új Greenlight felhasználó regisztrált
+          subject: Új OpenSchool felhasználó regisztrált
           username: "A felhasználó %{name} felhasználónévvel, %{email} e-mail címmel regisztrált."
         subject: Meghívás a OpenSchool használatára
         username: "A felhasználóneved %{email}."
