--- a/config/locales/nl.yml
+++ b/config/locales/nl.yml
@@ -36,7 +36,7 @@ nl:
         enabled: Ingeschakeld
         info: Sta alleen geverifieerde gebruikers toe om deel te nemen aan een ruimte
         title: Verificatie vereist voor kamers
-        user-info: Je moet bij Greenlight inloggen om lid te kunnen worden van deze kamer
+        user-info: Je moet bij OpenSchool inloggen om lid te kunnen worden van deze kamer
       branding:
         change: Wijzig afbeelding
         info: Wijzig de merkafbeelding die in de linkerbovenhoek wordt weergegeven
@@ -83,7 +83,7 @@ nl:
       shared_access:
         info: "Als u dit instelt op uitgeschakeld, wordt de knop verwijderd uit de keuzelijst Kameropties, waardoor gebruikers geen kamers kunnen delen"
         title: Gebruikers toestaan kamers te delen
-      subtitle: Greenlight aanpassen
+      subtitle: OpenSchool aanpassen
       title: Site-instellingen
     flash:
       approved: Gebruiker is succesvol goedgekeurd.
@@ -194,9 +194,9 @@ nl:
       contact_admin: "Als u geen beheerder bent, contacteer er dan een."
       continue: Ik wil graag 1.0 blijven gebruiken.
       notice: >-
-        Greenlight heeft een databasemigratiefout aangetroffen. <br> Dit kan zijn omdat u niet hebt bijgewerkt naar Greenlight 2.0.
+        OpenSchool heeft een databasemigratiefout aangetroffen. <br> Dit kan zijn omdat u niet hebt bijgewerkt naar OpenSchool 2.0.
       upgrade: Laat me zien hoe ik kan upgraden naar 2.0!
-      version: "We hebben een nieuwe versie van Greenlight uitgebracht, maar uw database is niet compatibel."
+      version: "We hebben een nieuwe versie van OpenSchool uitgebracht, maar uw database is niet compatibel."
     messages:
       blank: kan niet leeg zijn
       too_short: is te kort
@@ -207,7 +207,7 @@ nl:
       inclusion: is niet opgenomen in de lijst
     no_provider:
       message: "De site die u probeert te openen, is niet ingeschakeld"
-      help: Neem contact op met uw systeembeheerder om Greenlight in te stellen
+      help: Neem contact op met uw systeembeheerder om OpenSchool in te stellen
     not_found:
       message: "Sorry! De pagina die u zoekt, bestaat niet."
       help: "Is het mogelijk dat het is verwijderd?"
@@ -235,7 +235,7 @@ nl:
     email: E-mail
     submit: Verzenden
   go_back: Ga terug
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: Alle opnames
     dropdown:
@@ -261,9 +261,9 @@ nl:
   landing:
     about: "%{href} is een eenvoudige front-end voor uw OpenSchool open-source webconferentieserver. U kunt uw eigen ruimtes maken om sessies te hosten of u kunt via een korte en handige link lid worden van anderen."
     welcome: Welkom bij OpenSchool.
-    video: Bekijk onze tutorial over het gebruik van Greenlight
+    video: Bekijk onze tutorial over het gebruik van OpenSchool
     upgrade: Laat me zien hoe ik kan upgraden naar 2.0!
-    version: "We hebben een nieuwe versie van Greenlight uitgebracht, maar uw database is niet compatibel."
+    version: "We hebben een nieuwe versie van OpenSchool uitgebracht, maar uw database is niet compatibel."
   language_default: Standaard (browsertaal)
   ldap_error: Kan geen verbinding maken met de LDAP-server. Controleer uw LDAP-configuratie in het env-bestand en zorg ervoor dat uw server actief is.
   login: Inloggen
@@ -275,10 +275,10 @@ nl:
         signin: "Om toegang te krijgen tot uw persoonlijke kamers, klikt u op de onderstaande knop en logt u in."
         signin_link: Inloggen
         signup:
-          info: Een nieuwe gebruiker heeft zich aangemeld om Greenlight te gebruiken.
-          more-info: "Om deze gebruiker toegang te geven tot Greenlight, moet u zijn account goedkeuren in de organisatie-instellingen."
+          info: Een nieuwe gebruiker heeft zich aangemeld om OpenSchool te gebruiken.
+          more-info: "Om deze gebruiker toegang te geven tot OpenSchool, moet u zijn account goedkeuren in de organisatie-instellingen."
           admins_link: Bezoek de organisatiepagina
-          subject: Nieuwe registratie van een Greenlightgebruiker
+          subject: Nieuwe registratie van een OpenSchoolgebruiker
           username: "De gebruiker heeft zich aangemeld met de naam %{name} en het e-mailadres %{email}."
         subject: Account goedgekeurd
         username: "Uw gebruikersnaam is %{email}."
@@ -292,9 +292,9 @@ nl:
         signup_info: Klik op de onderstaande knop om u aan te melden met uw e-mail en volg de stappen.
         signup_link: Registreren
         signup:
-          info: Een uitgenodigde gebruiker heeft zich aangemeld om Greenlight te gebruiken.
+          info: Een uitgenodigde gebruiker heeft zich aangemeld om OpenSchool te gebruiken.
           admins_link: Bezoek de organisatiepagina
-          subject: Nieuwe registratie van een Greenlightgebruiker
+          subject: Nieuwe registratie van een OpenSchoolgebruiker
           username: "De gebruiker heeft zich aangemeld met de naam %{name} en het e-mailadres %{email}."
         subject: Uitnodiging om lid te worden van OpenSchool
         username: "Uw gebruikersnaam is %{email}."
