--- a/config/locales/pt_BR.yml
+++ b/config/locales/pt_BR.yml
@@ -36,7 +36,7 @@ pt_BR:
         enabled: Habilitado
         info: Permita que apenas usuários autenticados se juntem a uma sala
         title: Exija autenticação para salas
-        user-info: Você precisa se autenticar no Greenlight para se juntar a essa sala
+        user-info: Você precisa se autenticar no OpenSchool para se juntar a essa sala
       branding:
         change: Alterar Imagem
         info: Altera a imagem da marca que aparece no canto superior esquerdo
@@ -66,7 +66,7 @@ pt_BR:
       rooms:
         info: Limita o número de salas que um usuário pode ter (incluindo Sala Home). Essa configuração não se aplica para administradores.
         title: Número de salas por Usuário.
-      subtitle: Personalizar Greenlight
+      subtitle: Personalizar OpenSchool
       title: Configurações do Site
     flash:
       approved: Usuário foi aprovado com sucesso.
@@ -165,9 +165,9 @@ pt_BR:
       contact_admin: "Se você não é um administrador, por favor contate um administrador."
       continue: Gostaria de permanecer usando 1.0.
       notice: >
-        Greenlight encontrou um erro de migração no banco de dados.<br> Isso pode ser porque você não atualizou para o Greenlight 2.0.
+        OpenSchool encontrou um erro de migração no banco de dados.<br> Isso pode ser porque você não atualizou para o OpenSchool 2.0.
       upgrade: Mostre-me como atualizar para 2.0.
-      version: "Lançamos uma nova versão do Greenlight, entretanto sua base de dados é incompatível."
+      version: "Lançamos uma nova versão do OpenSchool, entretanto sua base de dados é incompatível."
     messages:
       blank: não pode ser branco.
       too_short: é muito curto
@@ -206,7 +206,7 @@ pt_BR:
     email: Email
     submit: Enviar
   go_back: Voltar
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: Gravações
     dropdown:
@@ -230,9 +230,9 @@ pt_BR:
   landing:
     about: "%{href} é um front-end para seu servidor OpenSchool. Você pode criar suas salas para realizar sessões, ou entrar em salas de outras pessoas utilizando um link curto."
     welcome: Bem-vindo ao OpenSchool.
-    video: Assista ao nosso tutorial sobre como utilizar o Greenlight
+    video: Assista ao nosso tutorial sobre como utilizar o OpenSchool
     upgrade: Mostre-me como atualizar para o 2.0!
-    version: "Lançamos uma nova versão do Greenlight, entretanto sua base de dados é incompatível."
+    version: "Lançamos uma nova versão do OpenSchool, entretanto sua base de dados é incompatível."
   language_default: Padrão (idioma do navegador)
   ldap_error: Não é possível conectar ao servidor LDAP. Verifique sua configuração LDAP e certifique-se de que seu servidor está funcionando.
   login: Entrar
@@ -244,10 +244,10 @@ pt_BR:
         signin: "Para acessar suas salas pessoais, clique no botão abaixo e entre na aplicação."
         signin_link: Entrar
         signup:
-          info: Um novo usuário se cadastrou para utilizar o Greenlight.
-          more-info: "Para permitir que esse usuário acesse o Greenlight, você precisa aprovar a sua conta nas configurações da Organização."
+          info: Um novo usuário se cadastrou para utilizar o OpenSchool.
+          more-info: "Para permitir que esse usuário acesse o OpenSchool, você precisa aprovar a sua conta nas configurações da Organização."
           admins_link: Visitar a Página da Organização.
-          subject: Novo cadastro de conta do Greenlight
+          subject: Novo cadastro de conta do OpenSchool
           username: "Esse usuário se cadastrou com o nome %{name} e o e-mail %{email}."
         subject: Conta Aprovada
         username: "Sua identificação é %{email}."
@@ -261,9 +261,9 @@ pt_BR:
         signup_info: "Para se cadastrar utilizado o seu e-mail, clique no botão abaixo e siga os passos."
         signup_link: Cadastrar-se
         signup:
-          info: Um usuário que foi convidado se cadastrou para utilizar o Greenlight.
+          info: Um usuário que foi convidado se cadastrou para utilizar o OpenSchool.
           admins_link: Visite a página da Organização.
-          subject: Novo Cadastro de Usuário no Greenlight
+          subject: Novo Cadastro de Usuário no OpenSchool
           username: "Esse usuário se cadastrou com o nome %{name} e o e-mail %{email}."
         subject: Convite para se juntar ao OpenSchool.
         username: "Sua identificação é %{email}."
