--- a/config/locales/sk_SK.yml
+++ b/config/locales/sk_SK.yml
@@ -165,9 +165,9 @@ sk_SK:
       contact_admin: "Ak nie ste administrátor, prosím kontaktujte ho."
       continue: Chcel by som zostať na ver. 1.0.
       notice: >
-        Greenlight zaznamenal chybu pri migrácii databáze.<br> Možným dôvodom je, že ste neurobili upgrade na Greenlight 2.0.
+        OpenSchool zaznamenal chybu pri migrácii databáze.<br> Možným dôvodom je, že ste neurobili upgrade na OpenSchool 2.0.
       upgrade: "Návod, ako urobiť upgrade na ver. 2.0!"
-      version: "Vydali sme novú verziu Greenlight, ale Vaša databáza nie je kompatibilná."
+      version: "Vydali sme novú verziu OpenSchool, ale Vaša databáza nie je kompatibilná."
     messages:
       blank: nemôže byť prázdne(y)
       too_short: je príliš krátke
@@ -178,7 +178,7 @@ sk_SK:
       inclusion: nie je v zozname
     no_provider:
       message: "Stránka, na ktorú sa pokúšate pristupovať, nebola povolená"
-      help: Kontaktujte prosím Vášho systémového administrátora pre nastavenie Greenlight
+      help: Kontaktujte prosím Vášho systémového administrátora pre nastavenie OpenSchool
     not_found:
       message: "Prepáčte! Stránka, ktorú hľadáte, neexistuje."
       help: "Je možné, že bola odstránená?"
@@ -206,7 +206,7 @@ sk_SK:
     email: Email
     submit: Odoslať
   go_back: Späť
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: Všetky nahrávky
     dropdown:
@@ -230,9 +230,9 @@ sk_SK:
   landing:
     about: "%{href} je jednoduchá nadstavba pre Váš open-source webový konferenčný server OpenSchool. Môžete vytvárať vlastné virtuálne miestnosti pre organizovanie konferencií, alebo sa môžete pripojiť ku konferenciám ostatných užívateľov jednoduchým a pohodlným kliknutím na prijatý odkaz."
     welcome: Vitajte na servri OpenSchool.
-    video: "Pozrite si videonávod, ako Greenlight používať"
+    video: "Pozrite si videonávod, ako OpenSchool používať"
     upgrade: "Ukážte mi, ako upgradovať na ver. 2.0!"
-    version: "Vydali sme novú verziu Greenlight, ale Vaša databáza nie je kompatibilná."
+    version: "Vydali sme novú verziu OpenSchool, ale Vaša databáza nie je kompatibilná."
   language_default: Predvolený (jazyk prehliadača)
   ldap_error: "Nie je možné pripojiť sa k LDAP servru. Prosím skontrolujte LDAP konfiguráciu v súbore .env a ubezpečte sa, že LDAP server beží."
   login: Prihlásiť
@@ -244,10 +244,10 @@ sk_SK:
         signin: Pre prístup do Vašich miestností kliknite na tlačítko nižšie a prihláste sa.
         signin_link: Prihlásenie
         signup:
-          info: Nový Greenlight užívateľ bol zaregistrovaný.
+          info: Nový OpenSchool užívateľ bol zaregistrovaný.
           more-info: Pre aktiváciu prístupu užívateľa do systému je nutné schváliť jeho účet administrátorom v nastaveniach organizácie.
           admins_link: Navštívte stránku Organizácia
-          subject: Registrácia nového užívateľa Greenlight
+          subject: Registrácia nového užívateľa OpenSchool
           username: "Bol zaregistrovaný nový užívateľ s menom %{name} a emailom %{email}."
         subject: Účet schválený
         username: "Vaše užívateľské meno je %{email}."
@@ -261,9 +261,9 @@ sk_SK:
         signup_info: "Pre registráciu Vaším emailom, kliknite na tlačítko nižšie a postupujte podľa predpísaných krokov."
         signup_link: Registrácia
         signup:
-          info: Pozvaný Greenlight užívateľ sa zaregistroval.
+          info: Pozvaný OpenSchool užívateľ sa zaregistroval.
           admins_link: Navštívte stránku Organizácia
-          subject: Registrácia nového užívateľa Greenlight
+          subject: Registrácia nového užívateľa OpenSchool
           username: "Nový užívateľ sa zaregistroval s menom %{name} a emailom %{email}."
         subject: Pozvánka na prístup k systému OpenSchool
         username: "Vaše užívateľské meno je %{email}."
