--- a/config/locales/sv_SE.yml
+++ b/config/locales/sv_SE.yml
@@ -36,7 +36,7 @@ sv_SE:
         enabled: Aktiverad
         info: Tillåt endast autentiserade användare att gå med i ett rum
         title: Kräver godkännande för rummen
-        user-info: Du måste logga in på Greenlight för att gå med i det här rummet
+        user-info: Du måste logga in på OpenSchool för att gå med i det här rummet
       branding:
         change: Ändra bild
         info: Ändra varumärkesbilden som visas längst upp till vänster
@@ -66,7 +66,7 @@ sv_SE:
       rooms:
         info: Begränsar antalet rum som en användare kan ha (inklusive hemrum). Den här inställningen gäller inte för administratörer.
         title: Antal rum per användare
-      subtitle: Anpassa Greenlight
+      subtitle: Anpassa OpenSchool
       title: Webbplatsinställningar
     flash:
       approved: Användaren har framgångsrikt godkänts.
@@ -161,9 +161,9 @@ sv_SE:
       contact_admin: "Om du inte är administratör, vänligen kontakta en."
       continue: Jag skulle vilja fortsätta använda 1.0.
       notice: >
-        Greenlight stötte på ett migreringsfel för databaser.<br> Det här kan bero på att du inte har uppdaterat till Greenlight 2.0.
+        OpenSchool stötte på ett migreringsfel för databaser.<br> Det här kan bero på att du inte har uppdaterat till OpenSchool 2.0.
       upgrade: Visa mig hur man uppgraderar till 2.0!
-      version: "Vi har släppt en ny version av Greenlight, men din databas är inte kompatibel."
+      version: "Vi har släppt en ny version av OpenSchool, men din databas är inte kompatibel."
     messages:
       blank: kan inte vara tomt
       too_short: är för kort
@@ -174,7 +174,7 @@ sv_SE:
       inclusion: ingår inte i listan
     no_provider:
       message: Webbplatsen du försöker nå är inte aktiverad
-      help: Kontakta din systemadministratör för att ställa in Greenlight
+      help: Kontakta din systemadministratör för att ställa in OpenSchool
     not_found:
       message: Förlåt! Sidan du letar efter finns inte.
       help: "Är det möjligt att den har tagits bort?"
@@ -202,7 +202,7 @@ sv_SE:
     email: E-post
     submit: Skicka in
   go_back: Gå tillbaka
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: Alla inspelningar
     dropdown:
@@ -226,9 +226,9 @@ sv_SE:
   landing:
     about: "%{href} är ett enkelt front-end för din OpenSchool open-source webbkonferensserver. Du kan skapa egna rum för att vara värd sessioner, eller gå med andra med en kort och bekväm länk."
     welcome: Välkommen till OpenSchool.
-    video: Titta på vår handledning om att använda Greenlight
+    video: Titta på vår handledning om att använda OpenSchool
     upgrade: Visa mig hur man uppgraderar till 2.0!
-    version: "Vi har släppt en ny version av Greenlight, men din databas är inte kompatibel."
+    version: "Vi har släppt en ny version av OpenSchool, men din databas är inte kompatibel."
   language_default: Standard (webbläsarspråk)
   ldap_error: Det gick inte att ansluta till LDAP-servern. Kontrollera din LDAP-konfiguration i env-filen och se till att servern körs.
   login: Logga in
@@ -240,10 +240,10 @@ sv_SE:
         signin: "För att komma åt dina personliga rum, klicka på knappen nedan och logga in."
         signin_link: Logga in
         signup:
-          info: En ny användare har anmält sig för att använda Greenlight.
-          more-info: För att tillåta den här användaren att komma åt Greenlight måste du godkänna sitt konto i organisationsinställningar.
+          info: En ny användare har anmält sig för att använda OpenSchool.
+          more-info: För att tillåta den här användaren att komma åt OpenSchool måste du godkänna sitt konto i organisationsinställningar.
           admins_link: Besök organisationssidan
-          subject: Ny Greenlight-användarregistrering
+          subject: Ny OpenSchool-användarregistrering
           username: "Användaren registrerade sig med namnet %{name} och e-posten %{email}."
         subject: Kontot godkänt
         username: "Ditt användarnamn är %{email}."
@@ -257,9 +257,9 @@ sv_SE:
         signup_info: "För att registrera dig med din e-post, klicka på knappen nedan och följ stegen."
         signup_link: Bli medlem
         signup:
-          info: En användare som inbjudits har anmält sig för att använda Greenlight.
+          info: En användare som inbjudits har anmält sig för att använda OpenSchool.
           admins_link: Besök organisationssidan
-          subject: Ny Greenlight-användarregistrering
+          subject: Ny OpenSchool-användarregistrering
           username: "Användaren registrerade sig med namnet %{name} och e-posten %{email}."
         subject: Inbjudan att gå med i OpenSchool
         username: "Ditt användarnamn är %{email}."
