--- a/config/locales/th.yml
+++ b/config/locales/th.yml
@@ -82,7 +82,7 @@ th:
       shared_access:
         info: ตั้งค่าเป็น "ปิดการใช้งาน" เพื่อลบปุ่มจากเมนูห้องประชุม เพื่อป้องกันไม่ให้ผู้ใช้แชร์ห้องประชุม
         title: อนุญาตให้ผู้ใช้แชร์ห้องประชุม
-      subtitle: ตกแต่ง Greenlight
+      subtitle: ตกแต่ง OpenSchool
       title: ตั้งค่าเว็บไซต์
     flash:
       approved: ผู้ใช้ได้รับการอนุมัติเรียบร้อยแล้ว
@@ -193,9 +193,9 @@ th:
       contact_admin: ถ้าหากคุณไม่ใช่ผู้ดูแล โปรดติดต่อผู้รับผิดชอบ
       continue: ฉันยังต้องการที่จะใช้ 1.0.
       notice: >
-        Greenlight พบข้อผิดพลาดในการย้ายฐานข้อมูล<br> อาจเป็นเพราะคุณไม่ได้อัปเดตเป็น Greenlight 2.0
+        OpenSchool พบข้อผิดพลาดในการย้ายฐานข้อมูล<br> อาจเป็นเพราะคุณไม่ได้อัปเดตเป็น OpenSchool 2.0
       upgrade: แสดงวิธีอัปเกรดเกรดเป็น 2.0!
-      version: เราได้เปิดตัว Greenlight เวอร์ชันใหม่ แต่ฐานข้อมูลของคุณไม่สามารถใช้งานร่วมกันได้
+      version: เราได้เปิดตัว OpenSchool เวอร์ชันใหม่ แต่ฐานข้อมูลของคุณไม่สามารถใช้งานร่วมกันได้
     messages:
       blank: ห้ามเว้นว่าง
       too_short: สั้นเกินไป
@@ -206,7 +206,7 @@ th:
       inclusion: ไม่อยู่ในรายการ
     no_provider:
       message: หน้าเว็บไซต์ที่คุณพยายามเข้าถึงไม่ได้เปิดใช้งาน
-      help: กรุณาติดต่อผู้ดูแลระบบของคุณเพื่อตั้งค่า Greenlight
+      help: กรุณาติดต่อผู้ดูแลระบบของคุณเพื่อตั้งค่า OpenSchool
     not_found:
       message: ขออภัย! หน้าที่คุณกำลังค้นหาไม่มีอยู่
       help: "เป็นไปได้ไหมที่มันจะถูกลบ?"
@@ -234,7 +234,7 @@ th:
     email: อีเมล์
     submit: ส่ง
   go_back: กลับ
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: บันทึกการประชุม
     dropdown:
@@ -260,9 +260,9 @@ th:
   landing:
     about: "%{href}เป็นฟรอนต์เอ็นด์ที่เรียบง่ายสำหรับเซิร์ฟเวอร์การประชุมผ่านเว็บโอเพ่นซอร์ส OpenSchool ของคุณ คุณสามารถสร้างห้องของคุณเองเพื่อโฮสต์เซสชันหรือเข้าร่วมผู้อื่นโดยใช้ลิงก์ที่สั้นและสะดวก"
     welcome: ยินดีต้อนรับสู่ OpenSchool
-    video: ดูการแนะนำการใช้งาน Greenlight
+    video: ดูการแนะนำการใช้งาน OpenSchool
     upgrade: แสดงวิธีอัปเกรดเป็น 2.0!
-    version: "เราได้ปล่อย Greenlight เวอร์ชั่นใหม่ , แต่ ฐานข้อมูลของคุณไม่สามารถใช้ร่วมกันได้"
+    version: "เราได้ปล่อย OpenSchool เวอร์ชั่นใหม่ , แต่ ฐานข้อมูลของคุณไม่สามารถใช้ร่วมกันได้"
   language_default: ค่าเริ่มต้น (ภาษาที่แสดงบนเบราว์เซอร์)
   ldap_error: ไม่สามารถเชื่อมต่อไปยัง LDRP Server ได้ โปรดตรวจสอบการตั้งค่า LDRP ของคุณใน ไฟล์ env และแน่ใจว่า เซิฟเวอร์ของคุณทำงานอยู่
   login: เข้าสู่ระบบ
@@ -274,10 +274,10 @@ th:
         signin: ในการเข้าถึงห้องส่วนตัวของคุณ คลิกปุ่มด้านล่างเพื่อลงชื่อเข้าใช้
         signin_link: เข้าสู่ระบบ
         signup:
-          info: ผู้ใช้ใหม่ได้ลงทะเบียนเพื่อใช้ Greenlight
-          more-info: ในการอนุญาตให้ผู้ใช้รายนี้เข้าถึง Greenlight คุณต้องอนุมัติบัญชีของพวกเขาในการตั้งค่าองค์กร
+          info: ผู้ใช้ใหม่ได้ลงทะเบียนเพื่อใช้ OpenSchool
+          more-info: ในการอนุญาตให้ผู้ใช้รายนี้เข้าถึง OpenSchool คุณต้องอนุมัติบัญชีของพวกเขาในการตั้งค่าองค์กร
           admins_link: เยี่ยมชมหน้าเพจขององค์กร
-          subject: ลงชื่อผู้ใช้ Greenlight ใหม่
+          subject: ลงชื่อผู้ใช้ OpenSchool ใหม่
           username: "ผู้ใช้ลงทะเบียนด้วยชื่อ %{name}ชื่อ และอีเมล %{email}."
         subject: อนุมัติบัญชีแล้ว
         username: "ชื่อผู้ใช้ของคุณคือ%{email}."
@@ -291,9 +291,9 @@ th:
         signup_info: ในการลงทะเบียนโดยใช้อีเมลของคุณคลิกปุ่มด้านล่างและทำตามขั้นตอน
         signup_link: ลงชื่อ
         signup:
-          info: ผู้ที่ได้รับเชิญลงทะเบียนเพื่อใช้งาน Greenlight.
+          info: ผู้ที่ได้รับเชิญลงทะเบียนเพื่อใช้งาน OpenSchool.
           admins_link: เยี่ยมชมหน้าองค์กร
-          subject: ลงชื่อผู้ใช้ Greenlight ใหม่
+          subject: ลงชื่อผู้ใช้ OpenSchool ใหม่
           username: "ผู้ใช้ลงทะเบียนด้วยชื่อ %{name}ชื่อ และอีเมล %{email}อีเมล."
         subject: คำเชิญให้เข้าร่วม OpenSchool
         username: "ชื่อผู้ใช้ของคุณคือ %{email}."
