--- a/config/locales/zh_TW.yml
+++ b/config/locales/zh_TW.yml
@@ -83,7 +83,7 @@ zh_TW:
       shared_access:
         info: 設定為“禁用”將從“會議室選項”下拉清單中刪除按鈕，以防止使用者共用會議室
         title: 允許使用者共用會議室
-      subtitle: 自訂Greenlight
+      subtitle: 自訂OpenSchool
       title: 網站設定
     flash:
       approved: 已成功批准使用者
@@ -194,9 +194,9 @@ zh_TW:
       contact_admin: 請聯繫管理員。
       continue: 還是繼續使用 1.0吧。
       notice: >
-        Greenlight 遇到資料庫遷移錯誤。<br>可能因為您還沒有更新到 Greenlight 2.0。
+        OpenSchool 遇到資料庫遷移錯誤。<br>可能因為您還沒有更新到 OpenSchool 2.0。
       upgrade: 告訴我如何升級到 2.0!
-      version: 我們已經發佈了新版Greenlight，但您的資料庫不相容。
+      version: 我們已經發佈了新版OpenSchool，但您的資料庫不相容。
     messages:
       blank: 不能是空白的
       too_short: 太短了
@@ -207,7 +207,7 @@ zh_TW:
       inclusion: 列表中不存在
     no_provider:
       message: 您嘗試訪問的網站未啟用
-      help: 請與系統管理員聯繫以設定Greenlight
+      help: 請與系統管理員聯繫以設定OpenSchool
     not_found:
       message: 對不起！您要查找的頁面不存在。
       help: 它有可能被移除了嗎？
@@ -235,7 +235,7 @@ zh_TW:
     email: Email
     submit: 提交
   go_back: 返回
-  greenlight: Greenlight
+  greenlight: OpenSchool
   header:
     all_recordings: 所有錄影
     dropdown:
@@ -263,7 +263,7 @@ zh_TW:
     welcome: 歡迎來到OpenSchool線上會議系統
     video: 請看使用說明
     upgrade: 告訴我怎麼升級到 2.0!
-    version: 我們發佈了新版Greenlight，但您的資料庫不相容。
+    version: 我們發佈了新版OpenSchool，但您的資料庫不相容。
   language_default: 預設（流覽器語言）
   ldap_error: 無法連接到LDAP伺服器，請在env檔中檢查LDAP配置，還要確保服務已經啟動。
   login: 登錄
@@ -275,10 +275,10 @@ zh_TW:
         signin: 要訪問您的個人會議室，請按一下下面的按鈕並登錄。
         signin_link: 登錄
         signup:
-          info: 一個新使用者已註冊使用Greenlight。
+          info: 一個新使用者已註冊使用OpenSchool。
           more-info: 若要允許此使用者訪問greenlight，您必須在「網站管理」中批准其帳戶。
           admins_link: 訪問網站管理頁面
-          subject: 新Greenlight使用者註冊
+          subject: 新OpenSchool使用者註冊
           username: "使用者註冊了名稱 %{name} 和電子郵箱 %{email}."
         subject: 帳戶已批准
         username: "您的使用者帳號是 %{email}."
@@ -294,7 +294,7 @@ zh_TW:
         signup:
           info: 被邀請的使用者已註冊使用greenlight。
           admins_link: 訪問網站管理頁面
-          subject: 新Greenlight使用者註冊
+          subject: 新OpenSchool使用者註冊
           username: "使用者註冊了名稱%{name} 和電子郵箱 %{email}."
         subject: 邀請加入 OpenSchool
         username: "您的使用者帳號是 %{email}."
